# cargofetch

./: .SRCINFO  Cargo.toml  LICENSE.md  PKGBUILD  README.md  flake.nix
.github/workflows/: draft.yml  rust.yml
Formula/: cargofetch.rb
src/: art.rs  checks.rs  cli.rs  lib.rs  main.rs  parse.rs  size.rs
