[package]
name = "rust-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
    "precommit-hook",
    "run-cargo-fmt",
    "prepush-hook",
    "run-cargo-clippy",
    "run-cargo-test"
]

