[package]
name = "cargofetch"
version = "0.1.1"
edition = "2024"
categories = ["command-line-utilities"]
authors = ["Arjav Jain <arjavjain0703@gmail.com>"]
description = "A fetch utility for Rust projects"
license = "MIT"
repository = "https://github.com/arjav0703/rust-fetch"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
owo-colors = "4.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
which = "7.0.3"

